--- a/css/blog.css
+++ b/css/blog.css
@@ -5,13 +5,13 @@
 }
 
 .wrap {
-  max-width: 1200px;
+  width: 85%;
   margin: 0 auto;
-  padding: 200px 0 100px 0;
+  padding: 200px 0 0 0;
 }
 
 .practice__card {
-  width: 100%;
+  width: 32%;
   margin-bottom: 30px;
 }
 
@@ -39,16 +39,9 @@
 }
 
 /* レスポンシブ (768px以上)*/
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .practice__card {
-    width: 45%;
-  }
-}
-
-/* レスポンシブ (1000px以上)*/
-@media screen and (min-width: 1000px) {
-  .practice__card {
-    width: 30%;
+    width: 100%;
     margin-bottom: 0;
   }
 }
