--- a/css/service.css
+++ b/css/service.css
@@ -1,52 +1,57 @@
 .small-container {
-  max-width: 90%;
-  margin: 150px auto 0;
+  max-width: 85%;
+  margin: 130px auto 0;
 }
 
 /*--------------------- news--------------------- */
-
 .news__list {
   margin-top: 30px;
   padding: 15px 0 30px;
 }
 
 .news__list li {
-  border-top: 2px solid #d3d3d3;
+  border-top: 2px solid #9e9e9e;
   padding: 20px 0;
   display: flex;
 }
 
 .news__list li:last-child {
-  border-bottom: 2px solid #d3d3d3;
+  border-bottom: 2px solid #9e9e9e;
 }
 
-.news__list h2 {
-  font-size:20pt;
-  padding: 0px 0px 10px 50px;
+.news__list-detail h2 {
+  font-size:24px;
+  padding: 0px 0px 10px 40px;
 }
 
 .news__list p {
-  font-size: 12pt;
-  padding: 0px 0px 0px 50px;
+  font-size: 16px;
+  padding: 0px 0px 0px 40px;
+  line-height: 25px;
 }
 
 .news__list-photo {
-  width: 300px;
+  width: 290px;
 }
 
 @media screen and (max-width: 768px) {
   .news__list li{
     display: flex;
     flex-flow: column;
+    text-align:center;
+  }
+
+  .news__list-photo {
+    width: 100%;
   }
 
   .news__list h2 {
-    font-size: 120%;
-    padding: 0px 0px 0px 0px;
+    text-align:left;
+    padding: 10px 0px 0px 0px;
   }
 
   .news__list p {
-    font-size: 80%;
+    text-align:left;
     padding: 10px 0px 0px 0px;
   }
 }
