--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,6 @@ li {
   justify-content: space-between;
 }
 
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
 .common__ttl {
   font-size: 30px;
   font-weight: bold;
@@ -167,56 +162,51 @@ li {
 }
 
 .firstview__item {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: block;
-  transition: 0.4s;
-  background: url(../img/mv.png) no-repeat;
-  background-size: cover;
+  height: 80vh;
+  background: url(../img/mv.png) center / cover;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  align-items: center;
 }
 
 .firstview__banner {
   position: relative;
-  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 28vh;
   background-image: url(../img/mv.png);
   background-position: right 0% bottom 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  font-size: 30px;
+  color: #fff;
+  font-weight: bold;
 }
 
 .firstview__item-ttl {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 28pt;
+  font-weight: bold;
+  font-size: 50px;
+  color:#fff;
 }
 
 .firstview__item-txt {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 14pt;
+  font-weight: bold;
+  font-size: 18px;
+  padding-top: 20px;
 }
 
 @media screen and (max-width: 768px) {
 .firstview__item {
-    position: relative;
     width: 100%;
-    height: 80vh;
-    display: block;
-    transition: 0.4s;
-    background: url(../img/mv.png) no-repeat;
-    background-size: cover;
+    margin-right: 0;
   }
 
 .firstview__banner {
     position: relative;
-    height: 15vh;
+    height: 30vh;
     background-image: url(../img/mv.png);
     background-position: right 0% bottom 20%;
     background-repeat: no-repeat;
@@ -224,7 +214,7 @@ li {
   }
 
   .firstview__item-ttl {
-    font-size:120%;
+    font-size: 28px;
     width:90%;
     text-align:center;
   }
@@ -273,60 +263,36 @@ li {
 /*--------------------- service--------------------- */
 
 #service {
+  padding-top: 100px;
   margin-top: 80px;
+  width:80%;
+  margin: 0 auto;
 }
 
 .service-wrap {
-  display: grid;
-  grid-template-rows: 400px 400px;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.service-wrap__item img {
-  width: 100%;
-  height: 100vh;
-  display: inline-block;
-
-  margin: 0 auto;
-  display: block;
+.service-wrap__item {
+  width: 49%;
+  margin-top: 20px;
+  margin-right: calc(100% - (49% * 2));
 }
 
-.service-wrap__item-content-ttl {
-  text-align: left;
+.service-wrap__item:nth-child(2n) {
+  margin-right: 0;
+}
+
+.service-wrap__item-content-ttl{
+  padding-top: 10px;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .service-wrap__item-content {
-  font-size:11pt;
-}
-
-.service-wrap__item--first {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  padding:10px 10px 10px 10px;
-}
-
-.service-wrap__item--second {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  padding: 10px 10px 10px 10px;
-}
-
-.service-wrap__item--third {
-  grid-column: 1/2;
-  grid-row: 2/3;
-  padding: 10px 10px 10px 10px;
-}
-
-.service-wrap__item--forth {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  padding: 10px 10px 10px 10px;
-}
-
-.service-wrap__item-content-ttl {
-  margin: 10px 0;
-  font-size: 18px;
+  padding-top: 10px;
+  font-size:14px;
 }
 
 .service__link {
@@ -342,44 +308,12 @@ li {
 }
 
 @media screen and (max-width: 768px) {
-.service-wrap {
-    display: grid;
-    grid-template-rows: 350px 350px 350px 350px;
-    grid-template-columns: 1fr;
-    margin-top: 30px;
-  }
-
-.service-wrap__item img {
-  display: inline-block;
-
-  margin: 0 auto;
-  display: block;
-}
-
-.service-wrap__item--first {
-    grid-column: 1/1;
-    grid-row: 1/2;
-    padding: 10px 10px 10px 10px;
-  }
-
-  .service-wrap__item--second {
-    grid-column: 1/1;
-    grid-row: 2/3;
-    padding: 10px 10px 10px 10px;
-  }
-
-  .service-wrap__item--third {
-    grid-column: 1/1;
-    grid-row: 3/4;
-    padding: 10px 10px 10px 10px;
-  }
-
-  .service-wrap__item--forth {
-    grid-column: 1/1;
-    grid-row: 4/5;
-    padding: 10px 10px 10px 10px;
+  .service-wrap__item {
+    width: 100%;
+    margin-right: 0;
   }
 }
+
 /*---------------------blog--------------------- */
 #blog {
   margin-top: 80px;
@@ -521,7 +455,12 @@ li {
 /*---------------------contact--------------------- */
 #contact {
   margin-top: 80px;
-  padding: 40px 0;
+  padding: 40px 0 100px 0;
+}
+
+.contact_container {
+  max-width: 80%;
+  margin: 0 auto;
 }
 
 .contact-content {
@@ -756,6 +695,15 @@ li {
   cursor: pointer;
 }
 
+@media screen and (max-width: 768px) {
+  .modal__content {
+    margin: auto;
+    width: 90%;
+  }
+ .modal__content-inner {
+    width:90%;
+ }
+}
 /*---------------------scroll--------------------- */
 .scroll-top {
   position: fixed;
